--- a/components/layout.module.scss
+++ b/components/layout.module.scss
@@ -1,13 +1,32 @@
+@use "../styles/variables.scss";
+
 .container {
   max-width: 36rem;
   padding: 0 1rem;
   margin: 3rem auto 6rem;
+  outline: 2px solid variables.$greenColor;
 }
 
 .header {
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  &:hover {
+    background-color: yellow;
+  }
+
+  &.red:hover {
+    background-color: red;
+  }
+}
+
+.title {
+  composes: heading2Xl from "../styles/utils.module.css";
+
+  &.red:hover {
+    background-color: red;
+  }
 }
 
 .backToHome {
